--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/aak-se/job/oHnuafws'> AAK karri?rer?Assistant Technical Product Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/rewardgateway/426a19fb-9393-455c-af59-1f33bbe7ce3d'>Reward Gateway - E-Commerce Product Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://consultport.join.com/jobs/255313-product-manager-internship'>Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -60,7 +68,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/marqeta/jobs/1793491'>Job Application for Product Manager, Delivery at Marqeta</a></h5> 
+<h5><a href='https://boards.greenhouse.io/marqeta/jobs/1793491'>Job Application for Product Manager, Delivery at Marqeta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -72,7 +80,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/endless/e429bff6-21de-4b1d-87de-8d0065f40625'>Endless - Product Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/endless/e429bff6-21de-4b1d-87de-8d0065f40625'>Endless - Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -80,7 +88,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/liferay/job/otdBafwb'>Liferay, Inc. Careers - Product Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/liferay/job/otdBafwb'>Liferay, Inc. Careers - Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -170,7 +178,7 @@ processes.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/captain401/jobs/1791478'>Job Application for Product Manager - Integrations at Human Interest</a></h5> 
+<h5><a href='https://boards.greenhouse.io/captain401/jobs/1791478'>Job Application for Product Manager - Integrations at Human Interest</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -182,7 +190,7 @@ processes.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o62R9fwS&__jvst=Employee&__jvsd=sbGZ9gwK&__jvsc=Twitter&bid=nT8HTKwQ'>Brandwatch Careers - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o62R9fwS&__jvst=Employee&__jvsd=sbGZ9gwK&__jvsc=Twitter&bid=nT8HTKwQ'>Brandwatch Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -237,7 +245,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tourradar/4818b918-3783-4f36-8714-b83badbb5fa5'>TourRadar - Senior Product Designer, Traveller Experiences (Freelance/Remote)</a></h5> 
+<h5><a href='https://jobs.lever.co/tourradar/4818b918-3783-4f36-8714-b83badbb5fa5'>TourRadar - Senior Product Designer, Traveller Experiences (Freelance/Remote)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -259,7 +267,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4364693002'>Job Application for Product Manager, Risk & Anti-fraud at SumUp</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4364693002'>Job Application for Product Manager, Risk & Anti-fraud at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -323,7 +331,7 @@ other?...</p>
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/molekule/852aa052-10d5-488f-bb26-5b874e156330'>Molekule - Senior UX Product Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/molekule/852aa052-10d5-488f-bb26-5b874e156330'>Molekule - Senior UX Product Designer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -343,7 +351,7 @@ other?...</p>
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://flowtify.recruiterbox.com/jobs/fk0jqzl'>
+<h5><a href='http://flowtify.recruiterbox.com/jobs/fk0jqzl'>
     Product Owner (m/w/d) at Flowtify GmbH
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -365,7 +373,7 @@ other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999692200516-product-manager-h-f-'>Proprioo Product manager (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999692200516-product-manager-h-f-'>Proprioo Product manager (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -419,7 +427,7 @@ responsible for the overall management of one or more technology solutions for..
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://comtravo.join.com/jobs/258303-senior-product-owner-f-m-x-data-science-focus'>Job @ Comtravo (Berlin): Senior Product Owner (f/m... | JOIN</a></h5> 
+<h5><a href='https://comtravo.join.com/jobs/258303-senior-product-owner-f-m-x-data-science-focus'>Job @ Comtravo (Berlin): Senior Product Owner (f/m... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -450,14 +458,6 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <hr/>
 <h5><a href='https://boards.greenhouse.io/dashlane/jobs/1790316'>Job Application for Senior Product Manager (B2B)  at Dashlane</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/varsitytutors/jobs/1788005'>Job Application for Product Manager at Varsity Tutors</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Wizikey/743999692177688-product-manager'>Wizikey Product Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Gurugram, Haryana</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
