--- a/data-engineer.html
+++ b/data-engineer.html
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/streetlightdata/4677d0dc-2a81-45b4-9815-72b4d33d9432'>StreetLight Data - Senior Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/streetlightdata/4677d0dc-2a81-45b4-9815-72b4d33d9432'>StreetLight Data - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -80,7 +80,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/data-engineer-9706'>Data Engineer - Rakuten Careers</a></h5> 
+<h5><a href='https://rakuten.referrals.selectminds.com/jobs/data-engineer-9706'>Data Engineer - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -137,7 +137,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qDf9VfwG&k=Job&j=oP9j7fw8&__jvst=Employee+(with+Jobvite+Account)&__jvsd=ssW2Pgw0&__jvsc=Twitter&bid=nOwwSKwX'>Zscaler Careers - Senior Big Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qDf9VfwG&k=Job&j=oP9j7fw8&__jvst=Employee+(with+Jobvite+Account)&__jvsd=ssW2Pgw0&__jvsc=Twitter&bid=nOwwSKwX'>Zscaler Careers - Senior Big Data Engineer</a></h5> 
 <p><span class="badge badge-light">Atlanta California</span></p>
 <p>Posted on:: 2019-04-05</p>
 <hr/>
@@ -145,7 +145,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/socure/832953ce-f222-4df0-82ee-c052a559ef99/apply'>Socure - Senior Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/socure/832953ce-f222-4df0-82ee-c052a559ef99/apply'>Socure - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... U.S. Equal Employment Opportunity information (Completion is voluntary and will 
 not subject you to adverse treatment). Our company values diversity.</p>
@@ -268,7 +268,7 @@ Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p
 machine learning and be part of transforming the way that we understand and 
 talk to?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/missionlane/jobs/4365462002'>Job Application for Data Engineer/ETL Developer at Mission Lane</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/missionlane/jobs/4365462002'>Job Application for Data Engineer/ETL Developer at Mission Lane</a></h5> 
 <p><span class="badge badge-light">Richmond</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -285,7 +285,7 @@ was born out of the challenges facing today's marketers. Incubated within?...</p
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/A123Systems/743999692078193-data-engineer'>A123 Systems DATA ENGINEER | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/A123Systems/743999692078193-data-engineer'>A123 Systems DATA ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -338,7 +338,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c'>Mattermost - Data Engineer (Remote)</a></h5> 
+<h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c'>Mattermost - Data Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light">Arlington</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -346,7 +346,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071811-data-engineer'>Bey Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999692071811-data-engineer'>Bey Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -387,15 +387,15 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999691978050-data-engineer'>Bey Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999691978050-data-engineer'>Bey Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/drizly/0729bdbf-5e2a-4ee2-a0c6-53a47c427f13'>Drizly - Analytics Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drizly/0729bdbf-5e2a-4ee2-a0c6-53a47c427f13'>Drizly - Analytics Data Engineer</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semanticbits.workable.com/j/2A0E204465'>SemanticBits - Jobs: Data Engineer in Test - REMOTE - Apply online</a></h5> 
+<h5><a href='https://semanticbits.workable.com/j/2A0E204465'>SemanticBits - Jobs: Data Engineer in Test - REMOTE - Apply online</a></h5> 
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -419,7 +419,7 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/quizlet-2/ed729224-8655-41bb-9c41-35dad981ac76'>Quizlet - Senior Data Engineering Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/quizlet-2/ed729224-8655-41bb-9c41-35dad981ac76'>Quizlet - Senior Data Engineering Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Senior Data Engineering Manager. San Francisco, CA. Data Engineering ? Data 
 Engineering. Full-time. Apply for this job. Quizlet's mission is to help students?...</p>
@@ -450,7 +450,7 @@ TAL, Machine Learning, mod?lisation spatio-temporelle) qui seront mises en?...</
 <p>Jul 9, 2019 ... VIU EYEWEAR has a job opening for DATA ENGINEER (M/F/D) in Munich (
 published: 04.04.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999692064495-big-data-engineer-python-graphql-google-cloud-100k-120k-full-benefits-401k-match-pto-career-growth-plus-more-'>IT Pros Big Data Engineer - Python/GraphQL/Google Cloud ($100K-$120K / Full Benefits / 401k Match / PTO / Career Growth / Plus More) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999692064495-big-data-engineer-python-graphql-google-cloud-100k-120k-full-benefits-401k-match-pto-career-growth-plus-more-'>IT Pros Big Data Engineer - Python/GraphQL/Google Cloud ($100K-$120K / Full Benefits / 401k Match / PTO / Career Growth / Plus More) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
